{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 367,
  "lineage": "920bb5e8-dc84-6275-e5bd-d1c39c7a8475",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:security-group/sg-077351f84df3bd3cf",
            "description": "Allow inbound NFS traffic from private subnets of the VPC",
            "egress": [],
            "id": "sg-077351f84df3bd3cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "100.64.0.0/17",
                  "100.64.128.0/17"
                ],
                "description": "Allow NFS 2049/tcp",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "self-managed-airflow-efs",
            "name_prefix": "",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:security-group/sg-0aa3d5e5d5bb3fbad",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0aa3d5e5d5bb3fbad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057738764afa60215"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Nodes on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057738764afa60215"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "self-managed-airflow-cluster-20240319150653048700000017",
            "name_prefix": "self-managed-airflow-cluster-",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "self-managed-airflow-cluster"
            },
            "tags_all": {
              "Name": "self-managed-airflow-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:security-group/sg-057738764afa60215",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057738764afa60215",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to Nodegroup all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0aa3d5e5d5bb3fbad"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa3d5e5d5bb3fbad"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa3d5e5d5bb3fbad"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa3d5e5d5bb3fbad"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa3d5e5d5bb3fbad"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa3d5e5d5bb3fbad"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa3d5e5d5bb3fbad"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 30822,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-055b9c5056b3a7bfb"
                ],
                "self": false,
                "to_port": 30822
              }
            ],
            "name": "self-managed-airflow-node-20240319150653051200000018",
            "name_prefix": "self-managed-airflow-node-",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "self-managed-airflow-node",
              "kubernetes.io/cluster/self-managed-airflow": "owned"
            },
            "tags_all": {
              "Name": "self-managed-airflow-node",
              "kubernetes.io/cluster/self-managed-airflow": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3712655075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "security_group_rule_id": "sgr-033df33c88a672dd6",
            "self": false,
            "source_security_group_id": "sg-057738764afa60215",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1568289225",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "security_group_rule_id": "sgr-0575c26c532b16508",
            "self": false,
            "source_security_group_id": "sg-057738764afa60215",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4151238695",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-0a00f1d5b62afe8ec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-61506849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-0b5c05971fa0bd500",
            "self": false,
            "source_security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1378672561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-060d9a15ba1a92727",
            "self": false,
            "source_security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2607724583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-06229e771fe06ed70",
            "self": false,
            "source_security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2285011974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-09c866ab04e9f7973",
            "self": false,
            "source_security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3969103821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-05a1ccefd171355bf",
            "self": false,
            "source_security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-330656585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-08889b20bbd256b71",
            "self": false,
            "source_security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_to_node_all_traffic",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to Nodegroup all traffic",
            "from_port": 0,
            "id": "sgrule-3159159774",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-0b9ebd28d87367e2a",
            "self": false,
            "source_security_group_id": "sg-0aa3d5e5d5bb3fbad",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3359793558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-0bff67765b4e80d44",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-2875140421",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-021c209173412ebab",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3204505932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-04b4440f0c9909817",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-459227811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-057738764afa60215",
            "security_group_rule_id": "sgr-0a794df910c503e39",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:security-group/sg-0e77c7e92bf929d3a",
            "description": "Complete PostgreSQL example security group",
            "egress": [],
            "id": "sg-0e77c7e92bf929d3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "100.64.0.0/16"
                ],
                "description": "PostgreSQL access from within VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "self-managed-airflow-20240319150653046300000016",
            "name_prefix": "self-managed-airflow-",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16",
              "100.64.0.0/16"
            ],
            "description": "PostgreSQL access from within VPC",
            "from_port": 5432,
            "id": "sgrule-1119610549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e77c7e92bf929d3a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:network-acl/acl-0bcae642c328f8a93",
            "default_network_acl_id": "acl-0bcae642c328f8a93",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bcae642c328f8a93",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "954503069243",
            "subnet_ids": [
              "subnet-04e2457472564e935",
              "subnet-0555a838346953654",
              "subnet-06e9e45f773d818ca",
              "subnet-076a6202bebc91372",
              "subnet-098b7d099361b46a4",
              "subnet-0c98da1318133747b",
              "subnet-0e967db3b06c4e728",
              "subnet-0fc9f9279a9dd40a1"
            ],
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-default"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-default"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:route-table/rtb-055564eb7db0f66c8",
            "default_route_table_id": "rtb-055564eb7db0f66c8",
            "id": "rtb-055564eb7db0f66c8",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-default"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:security-group/sg-079742358542bf775",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-079742358542bf775",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-default"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-default"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b25fe74e388004fe",
            "association_id": "eipassoc-080e24322a488d98b",
            "domain": "vpc",
            "id": "eipalloc-0b25fe74e388004fe",
            "network_border_group": "us-west-2",
            "network_interface": "eni-03102f0b0cbca8b0e",
            "private_dns": "ip-10-0-0-17.us-west-2.compute.internal",
            "private_ip": "10.0.0.17",
            "public_dns": "ec2-44-225-7-119.us-west-2.compute.amazonaws.com",
            "public_ip": "44.225.7.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:internet-gateway/igw-048846712a36595be",
            "id": "igw-048846712a36595be",
            "owner_id": "954503069243",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b25fe74e388004fe",
            "association_id": "eipassoc-080e24322a488d98b",
            "connectivity_type": "public",
            "id": "nat-07030d272beb1d7cb",
            "network_interface_id": "eni-03102f0b0cbca8b0e",
            "private_ip": "10.0.0.17",
            "public_ip": "44.225.7.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-098b7d099361b46a4",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-us-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f713c9845969e6c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07030d272beb1d7cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f713c9845969e6c2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048846712a36595be",
            "id": "r-rtb-054dbd14b0bcac8621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054dbd14b0bcac862",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:route-table/rtb-0f7a20a2ed2dd0856",
            "id": "rtb-0f7a20a2ed2dd0856",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-db"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:route-table/rtb-0f713c9845969e6c2",
            "id": "rtb-0f713c9845969e6c2",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07030d272beb1d7cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:route-table/rtb-054dbd14b0bcac862",
            "id": "rtb-054dbd14b0bcac862",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048846712a36595be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-public"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0954428ce7b24d61b",
            "route_table_id": "rtb-0f7a20a2ed2dd0856",
            "subnet_id": "subnet-076a6202bebc91372"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cecd574dced0d310",
            "route_table_id": "rtb-0f7a20a2ed2dd0856",
            "subnet_id": "subnet-06e9e45f773d818ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c403efdbdd42d61",
            "route_table_id": "rtb-0f713c9845969e6c2",
            "subnet_id": "subnet-0e967db3b06c4e728"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e604bc795c73a5c",
            "route_table_id": "rtb-0f713c9845969e6c2",
            "subnet_id": "subnet-0c98da1318133747b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a54b358c661e85bf",
            "route_table_id": "rtb-0f713c9845969e6c2",
            "subnet_id": "subnet-0fc9f9279a9dd40a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00789bbb81aae9e27",
            "route_table_id": "rtb-0f713c9845969e6c2",
            "subnet_id": "subnet-04e2457472564e935"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef07b8446bed836f",
            "route_table_id": "rtb-054dbd14b0bcac862",
            "subnet_id": "subnet-098b7d099361b46a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059c812eb62a6e70f",
            "route_table_id": "rtb-054dbd14b0bcac862",
            "subnet_id": "subnet-0555a838346953654"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-076a6202bebc91372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.20.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076a6202bebc91372",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-db-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-db-us-west-2a"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-06e9e45f773d818ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.21.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e9e45f773d818ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-db-us-west-2b"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-db-us-west-2b"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-0e967db3b06c4e728",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e967db3b06c4e728",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2a",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2a",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-0c98da1318133747b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c98da1318133747b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2b",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2b",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-0fc9f9279a9dd40a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "100.64.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc9f9279a9dd40a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2a",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2a",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-04e2457472564e935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "100.64.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e2457472564e935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2b",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-private-us-west-2b",
              "karpenter.sh/discovery": "self-managed-airflow",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-098b7d099361b46a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098b7d099361b46a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:subnet/subnet-0555a838346953654",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0555a838346953654",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-077b42f62c22ecb49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:954503069243:vpc/vpc-077b42f62c22ecb49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcae642c328f8a93",
            "default_route_table_id": "rtb-055564eb7db0f66c8",
            "default_security_group_id": "sg-079742358542bf775",
            "dhcp_options_id": "dopt-0b1624ef0a13511b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077b42f62c22ecb49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055564eb7db0f66c8",
            "owner_id": "954503069243",
            "tags": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow"
            },
            "tags_all": {
              "Blueprint": "self-managed-airflow",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "self-managed-airflow"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}